@@ -1,3 +1,6 @@
+Mon Jan 14 16:22:16 HKT 2019
+	Fix issues
+	* static variables may have no location(loc->file NULL).
 Tue Jan  8 19:14:36 HKT 2019
 	Fix issues
 	* plugins/uninit.cc: gen_code_paths may take too long for one path
